<resources>
    <string name="app_name">MyRunAppV3</string>

    <string name="login">login</string>
    <string name="register">register</string>
    <string name="new_user">New user? Register now</string>
    <string name="eMail">Email</string>
    <string name="password">Password</string>
    <string name="distance">Distance</string>
    <string name="confirm_password">Confirm password</string>
    <string name="list_of_races">list of races</string>
    <string name="add">add</string>
    <string name="cancel">cancel</string>
    <string name="events_list">Events list</string>

    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>


</resources>
