<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainMenuViewModel"
            type="com.gmail.bukinmg.viewmodel.MainMenuViewModel" />

    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.MenuDialogFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_distance"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:errorText="@{mainMenuViewModel.distanceError}">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/distance"
                android:inputType="number"
                android:maxLines="1"
                android:text="@={mainMenuViewModel.distance}" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:onClick="@{()-> mainMenuViewModel.onAddClick()}"
                android:text="@string/add" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:onClick="@{()-> mainMenuViewModel.onCancelClick()}"
                android:text="@string/cancel" />

        </LinearLayout>

    </LinearLayout>


</layout>