<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="datesAdapter"
            type="com.gmail.bukinmg.ui.adapter.DatesAdapter" />

        <variable
            name="mainMenuViewModel"
            type="com.gmail.bukinmg.viewmodel.MainMenuViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activity.MainMenuActivity">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAccent"
            android:gravity="center_vertical">

            <LinearLayout


                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_weight="0"
                    android:background="@drawable/ic_chevron_left"
                    android:onClick="@{()-> mainMenuViewModel.previousMonth()}" />


                <TextView
                    android:id="@+id/month"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@{mainMenuViewModel.month}"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_weight="0"
                    android:background="@drawable/ic_chevron_right"
                    android:onClick="@{()-> mainMenuViewModel.nextMonth()}" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_weight="0"
                    android:background="@drawable/ic_list"
                    android:onClick="@{()-> mainMenuViewModel.onListClick()}" />
                />
            </LinearLayout>


        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:id="@+id/days_of_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sun"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mon"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tue"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/wed"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/thu"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fri"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sat"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adapter="@{datesAdapter}"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="7" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/menu_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/colorAccent"
                android:dividerPadding="5dp"
                android:orientation="vertical"
                android:showDividers="middle">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="Your results for current week"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@color/colorAccent"
                    android:dividerPadding="5dp"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:gravity="center"
                            android:text="Total distance"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:gravity="center"
                            android:text="@{mainMenuViewModel.totalDistance}"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:gravity="center"
                            android:text="Total attempts"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:gravity="center"
                            android:text="@{mainMenuViewModel.totalAttempts}"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="5dp"
                            android:gravity="center"
                            android:text="Average distance"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:gravity="center"
                            android:text="@{mainMenuViewModel.averageDistance}"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/menu_days_left"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:text="@{mainMenuViewModel.setTime()}"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</layout>